--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.9"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "@types/protobufjs": "^6.0.0",
     "async-gzip-gunzip": "^1.0.1",
     "awesome-metadata": "^0.1.0",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
