--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "lodash": "^4.17.20",
+    "pako": "^2.0.4",
     "path": "^0.12.7",
     "protobufjs": "^6.10.2",
     "ts-express-validator": "^0.1.0",
