--- a/package.json
+++ b/package.json
@@ -11,26 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/express": "^4.17.9"
+    "@types/axios": "^0.14.0"
   },
   "dependencies": {
-    "@pm2/io": "^4.3.5",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.12.19",
     "@types/protobufjs": "^6.0.0",
-    "async-gzip-gunzip": "^1.0.1",
-    "awesome-metadata": "^0.1.0",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
     "lodash": "^4.17.20",
     "pako": "^2.0.4",
-    "path": "^0.12.7",
     "protobufjs": "^6.10.2",
-    "ts-express-validator": "^0.1.0",
     "ts-node": "^9.0.0",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3",
