--- a/package.json
+++ b/package.json
@@ -4,22 +4,16 @@
   "description": "",
   "main": "dist/BackupConverters/TachiToPaperBackupConverter.js",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon -e ts  --exec \"npm run start\"",
     "recompile-tachiyomi-proto": "pbjs -t static-module -w commonjs -o src/Tachiyomi/proto/TachiyomiObjectModel.js src/Tachiyomi/proto/tachiyomiObjectModel.proto && pbts -o src/Tachiyomi/proto/TachiyomiObjectModel.d.ts src/Tachiyomi/proto/TachiyomiObjectModel.js",
     "build": "tsc",
-    "pack": "browserify dist/BackupConverters/TachiToPaperBackupConverter.js -o browser/bundle.js -s BackupConverter",
-    "packtiny": "browserify dist/BackupConverters/TachiToPaperBackupConverter.js -o browser/bundle.js -s BackupConverter --plugin tinyify"
+    "bundle": "npm run build && browserify dist/temp/module.js -s BackupConverter -o dist/bundle/backupConverter.js  --plugin tinyify"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^16.7.1",
     "@types/uuid": "^8.3.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "tinyify": "^3.0.0",
     "ts-node": "^10.2.1",
