--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "browserify": "^17.0.0",
     "tinyify": "^3.0.0",
     "ts-node": "^10.2.1",
-    "tslint": "^6.1.3"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "pako": "^2.0.4",
     "protobufjs": "^6.10.2",
-    "typescript": "^4.3.5",
     "uuid": "^8.3.2"
   }
 }
